unpackaged/main/default/objects/Trade_Licensing__c/Trade_Licensing__c.object-meta.xml
<CustomObject>
    <label>Trade Licensing</label>
    <nameField>
        <label>License Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trade Licensing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>