unpackaged/main/default/objects/Trade_Licensing__c/fields/Issuing_Agency__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Agency__c</fullName>
    <label>Issuing Agency</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>