unpackaged/main/default/objects/Trade_Licensing__c/fields/License_Name__c.field-meta.xml
<CustomField>
    <fullName>License_Name__c</fullName>
    <label>License Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>