unpackaged/main/default/objects/Trade_Licensing__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business License</fullName>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Electrical License</fullName>
            </value>
            <value>
                <fullName>General Contractor</fullName>
            </value>
            <value>
                <fullName>Roofing License</fullName>
            </value>
            <value>
                <fullName>Solar License</fullName>
            </value>
            <value>
                <fullName>Special Trade License</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>