unpackaged/main/default/objects/Trade_Licensing__c/fields/Qualifier__c.field-meta.xml
<CustomField>
    <fullName>Qualifier__c</fullName>
    <label>Qualifier</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>